--- a/app/templates/editor/rdf-entity-list-item.html
+++ b/app/templates/editor/rdf-entity-list-item.html
@@ -1,3 +1,6 @@
 
-<div class="rdf-entity-label"> <img class="rdf-entity-handle" src="assets/images/drag_handle.png"> </img> <%= label || '' %> </div>
+<div class="rdf-entity-label">
+  <img class="rdf-entity-handle" src="assets/images/drag_handle.png"/> <%= label || '' %>
+</div>
 <div class="rdf-entity-uri"> <%= uri || '' %> </div>
+<img class="rdf-entity-arrow" src="assets/images/arrow_right.png"/>
