--- a/app/templates/editor/editor.html
+++ b/app/templates/editor/editor.html
@@ -34,6 +34,7 @@
         <table>
           <tr> <td class="key"> Limit </td> <td class="value"><input type="text" class="form-control in-rdf-attributes-limit" data-type="attributes" data-property="limit" value="<%= attributesLimit %>" placeholder="Limit"/></td></tr>
           <tr> <td class="key"> Offset </td> <td class="value"><input type="text" class="form-control in-rdf-attributes-offset" data-type="attributes" data-property="offset" value="<%= attributesOffset %>" placeholder="Offset"/></td></tr>
+          <tr> <td class="key"> Sort </td> <td class="value"> <input type="checkbox" class="in-rdf-attributes-sort" data-type="attributes" data-property="sort" <%= attributesSort ? 'checked' : '' %>/> </td> </tr>
         </table>
       </div>
     </span>
