Escaping urls in requests

--- a/app/templates/editor/editor.html
+++ b/app/templates/editor/editor.html
@@ -1,6 +1,6 @@
 <div class="row editor-title editor-connection-title">
   <div class="col-xs-12">
-    <h4> Connection to semantic data source </h4>
+    <h4> Connection </h4>
   </div>
   <img class="collapse-arrow collapsed" src="assets/images/arrow_down.png">
 </div>
