Some design stuff

--- a/app/templates/editor/editor.html
+++ b/app/templates/editor/editor.html
@@ -61,7 +61,7 @@
           <tr>
             <td class="key" colspan="2">
               <input type="checkbox" class="in-rdf-attributes-sort" data-type="attributes" data-property="sort" <%= attributesSort ? 'checked' : '' %>/>
-              Sort by revelance
+              Sort by relevance
             </td>
           </tr>
 
