--- a/assets/scss/_core.scss
+++ b/assets/scss/_core.scss
@@ -1,6 +1,26 @@
-.navbar {
+@font-face {
+  font-family: Etk;
+  src: local('Ericsson Capital'), local('EricssonC'), url('../fonts/ERICSSONCAPITALTT.TTF') format('truetype');
+}
+
+.navbar.navbar-inverse {
+  background-color: #036;
+  color: #ccc;
   .btn-logout {
     margin-top: 8px;
+  }
+  .navbar-brand {
+    color: #fff;
+    font-weight: bold;
+    font-family: Etk;
+    font-size: 20px;
+  }
+  .navbar-nav {
+    >li {
+      >a {
+        color: #eee;
+      }
+    }
   }
 }
 
@@ -13,6 +33,21 @@
   .footer {
     border-top: 1px solid #ccc;
     padding: 20px;
+  }
+}
+
+.container {
+  .jumbotron {
+    color: #036;
+    border: 1px solid #ccc;
+    text-align: center;
+    padding-left: 50px;
+    padding-right: 50px;
+    background-color: #f6f6f6;
+    h1 {
+      font-family: Etk;
+      font-size: 55px;
+    }
   }
 }
 
