--- a/assets/scss/_editor.scss
+++ b/assets/scss/_editor.scss
@@ -4,16 +4,22 @@
     border: 1px solid #ccc;
     cursor: pointer;
     position: relative;
-    @include box-shadow(0 0 6px 0 #ddd);
     @include border-radius(4px);
-    background-color: #f1f1f1;
-    @include transition(all 200ms);
+    background-color: #f6f6f6;
+    // @include transition(all 100ms);
+
+    h4 {
+      font-family: Etk;
+      color: #036;
+      font-weight: bold;
+    }
+
     &:hover {
-      @include box-shadow(0 0 8px 1px #ddd);
+      @include box-shadow(0 0 5px 0 #ddd);
       .collapse-arrow {
-        @include transform(rotate(-120deg) scale(1.2));
+        @include transform(rotate(-120deg));
         &.collapsed {
-          @include transform(rotate(30deg) scale(1.2));
+          @include transform(rotate(30deg));
         }
       }
     }
@@ -125,7 +131,7 @@
     top: 17px;
     right: 10px;
     @include transform(rotate(-90deg));
-    @include transition(all 400ms);
+    @include transition(all 300ms);
     &.collapsed {
       @include transform(rotate(0deg));
     }
@@ -183,10 +189,10 @@
     }
   }
   &:hover {
-    background-color: #f1f1f1;
+    background-color: #f6f6f6;
   }
   &.selected {
-    background-color: #f1f1f1;
+    background-color: #f6f6f6;
     .rdf-entity-handle {
       display: inline-block;
     }
@@ -237,10 +243,10 @@
       border-top: 1px solid #ccc;
     }
     &:hover {
-      background-color: #f1f1f1;
+      background-color: #f6f6f6;
     }
     &.selected {
-      background-color: #f1f1f1;
+      background-color: #f6f6f6;
     }
   }
 }
